--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -116,6 +116,7 @@ jobs:
     # Requires build job results
     needs: build-documentation
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - name: Download documentation
